# EtlBase

./: .gitignore  pyproject.toml
src/: __init__.py  base.py
src/etl/: __init__.py  extraction.py  interfaces.py  processing.py
src/etl_base/: db.py  exc.py  geo.py  webdriver.py
src/etl_base/_data/: municipios.parquet  unidades_saude.parquet
src/etl_base/etl/: elastic.py  extraction.py  interfaces.py
src/etl_base/util/: __init__.py  dataframe.py  log.py  mail.py  pandas.py  text.py
src/util/: log.py
src/utils/: logging.py
tests/: test_geo.py
tests/util/: test_dataframe.py  test_pandas.py  test_text.py
