[tool.poetry]
name = "EtlBase"
version = "0.1.0"
description = "base for SESPB Etls"
authors = ["SESPB <suporte@saude.pb.gov.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.15"
sqlalchemy = "^2.0.23"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
psycopg-binary = "^3.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
