[tool.poetry]
name = "EtlBase"
version = "0.4.0"
description = "base for SESPB ETLs"
authors = ["SESPB <suporte@saude.pb.gov.br>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "etl_base", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.15"
sqlalchemy = "^2.0.23"
requests = "^2.31.0"
unidecode = "^1.3.7"
pandas = "^2.1.4"
fastparquet = "^2024.2.0"
selenium = "^4.20.0"

[tool.poetry.group.dev.dependencies]
psycopg-binary = "^3.1.15"
pytest = "^7.4.3"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
test = 'pytest .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
